# semantic-kernel-first-play

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: 01_basic_setup.py  02_simple_agent.py  03_plugins.py  04_agent_memory.py  05_orchestration.py  06_chat_agent.py
examples/utils/: common.py
semantic_kernel_first_play.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
